valid_tests/statements/test1.go
// Test 1: If statements
func main() {
    x := 10
    if x > 5 {
        y := x * 2
    }
    if x < 20 {
        z := x + 5
    } else {
        w := x - 5
    }
}
