invalid_tests/expressions/test2.go
// Test 2: Unmatched parentheses
func main() {
    x := (10 + 20
}
